[Overflow-542] [BUGFIX] Change password modal fixes

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -23,6 +23,11 @@
     }
 }
 
+input::-ms-reveal,
+input::-ms-clear {
+    display: none;
+}
+
 .loading-screen {
     height: 90vh;
     @apply flex w-full items-center justify-center;
